[project]
name = "vocab-catcher"
version = "0.1.0"
description = "Telegram bot that turns words into Obsidian flashcards via Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot==21.6",
]

[tool.setuptools]
py-modules = ["bot", "vault_sync"]
